customer index & fixtures

--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -1,12 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CustomerController!{% endblock %}
+{% block title %}Customers List{% endblock %}
 
 {% block body %}
 
-<div class="container">
-    {% for customer in customers %}
-        {{ customer.name }}
-    {% endfor %}
-</div>
+    <div class="section__content section__content--p30">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-8">
+                    <!-- TOP CAMPAIGN-->
+                    <div class="top-campaign">
+                        <h3 class="title-3 m-b-30">Customers</h3>
+                        <div class="table-responsive">
+                            <table class="table table-top-campaign">
+                                <tbody>
+                                    {% for customer in customers %}
+                                        <tr>
+                                            <td><a href="{{ path('customer_show', {'id': customer.id}) }}">{{ customer.name }}</a></td>
+                                            <td>{{ customer.type }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
