--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -16,7 +16,7 @@
                                 {% endif %}
                                 <h5 class="text-sm-center mt-4 mb-1">{{ profile.user.username ?? 'null'  }}</h5>
                                 <div class="blockquote mt-3 text-right location text-sm-center">
-                                    {{ profile.firstname ?? 'firstname not spécified'  }} - {{ profile.lastname ?? 'lastname not spécified'  }}
+                                    {{ profile.firstname ?? 'firstname not specified'  }} - {{ profile.lastname ?? 'lastname not specified'  }}
                                 </div>
                                 <div class="location text-sm-center">
                                     <i>{{ profile.user.email }}</i>
