--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -133,12 +133,16 @@
                         <i class="fas fa-tachometer-alt"></i>Dashboard</a>
                 </li>
                 <li>
-                    <a href="{{ path('user_index') }}">
-                        <i class="fas fa-users"></i>Users</a>
-                </li>
-                <li>
                     <a href="{{ path('product_ index') }}">
                         <i class="fas fa-tags"></i>Products</a>
+                </li>
+                <li>
+                    <a href="{{ path('customer_index') }}">
+                        <i class="fas fa-users"></i>Customers</a>
+                </li>
+                <li>
+                    <a href="{{ path('user_index') }}">
+                        <i class="fas fa-user"></i>Users</a>
                 </li>
             </ul>
         </nav>
