--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}My Account{% endblock %}
+
 {% block body %}
 
     <div class="section__content section__content--p30">
