--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,71 +1,80 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}MyERP{% endblock %}</title>
+<html lang="en">
 
-        <!-- afin de pouvoir lire les fichier css de webpack -->
-        {{ encore_entry_link_tags('app') }}
+<head>
+    <!-- Required meta tags-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="My ERP">
+    <meta name="author" content="Chakiri Mohamed Yassir">
+    <meta name="keywords" content="erp">
 
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Title Page-->
+    <title>{% block title %}MyERP{% endblock %}</title>
 
-        <link rel="stylesheet" href="{{ asset('build/vendor.css') }}">
-        <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
-        <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        {% block stylesheets %}{% endblock %}
+    <!-- afin de pouvoir lire les fichier css de webpack -->
+    {{ encore_entry_link_tags('app') }}
 
-    </head>
-    <body class="animsition">
-        <div class="page-wrapper">
+    <link rel="stylesheet" href="{{ asset('build/vendor.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/font-face.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/theme.css') }}">
 
-            <!-- MENU -->
-            {% include 'menu.html.twig' %}
+    {% block stylesheets %}{% endblock %}
+</head>
 
-            <!-- PAGE CONTAINER-->
-            <div class="page-container">
+<body class="animsition">
+<div class="page-wrapper">
 
-                <!-- HEADER -->
-                {% include 'header.html.twig' %}
+    <!-- MENU -->
+    {% include 'menu.html.twig' %}
 
-                <!-- MAIN CONTENT PAGE -->
-                <div class="main-content">
+    <!-- PAGE CONTAINER-->
+    <div class="page-container">
 
-                    <!-- FLASH MESSAGE -->
-                    {% for label, messages in app.flashes %}
-                        {% for message in messages %}
-                            <div class="m-l-30 m-r-30 sufee-alert alert with-close alert-{{ label }} alert-dismissible fade show">
-                                {{ message }}
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            </div>
-                        {% endfor %}
-                    {% endfor %}
-                    <!-- END FLASH MESSAGE -->
+        <!-- HEADER -->
+        {% include 'header.html.twig' %}
 
-                    {% block body %}{% endblock %}
+        <!-- MAIN CONTENT-->
+        <div class="main-content">
 
-                </div>
+            <!-- FLASH MESSAGE -->
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="m-l-30 m-r-30 sufee-alert alert with-close alert-{{ label }} alert-dismissible fade show">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            <!-- END FLASH MESSAGE -->
 
-                <!--INSERT MODALS IN PAGE-->
-                {% block modals %}{% endblock %}
-
-            <!-- END PAGE CONTAINER -->
-            </div>
+            {% block body %}{% endblock %}
 
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <!--INSERT MODALS IN PAGE-->
+        {% block modals %}{% endblock %}
 
-        <!-- afin de pouvoir lire les fichier css de webpack -->
-        {{ encore_entry_script_tags('app') }}
+        <!-- END PAGE CONTAINER -->
+    </div>
 
-        <script type="text/javascript" src="{{ asset('build/vendor.js')}}"></script>
-        <script type="text/javascript" src="{{ asset('build/main.js')}}"></script>
-        <script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
+</div>
 
-        {% block javascripts %}{% endblock %}
-    </body>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<!-- afin de pouvoir lire les fichier css de webpack -->
+{{ encore_entry_script_tags('app') }}
+
+<script type="text/javascript" src="{{ asset('build/vendor.js')}}"></script>
+<script type="text/javascript" src="{{ asset('build/main.js')}}"></script>
+<script type="text/javascript" src="{{ asset('build/app.js')}}"></script>
+
+{% block javascripts %}{% endblock %}
+</body>
+
 </html>
+<!-- end document-->
