--- a/templates/order/form.html.twig
+++ b/templates/order/form.html.twig
@@ -78,15 +78,19 @@
 {% endblock %}
 
 {% macro orderItemRow(orderItem) %}
-    <a href="#" class="js-remove-form-product float-right">
-        <span class="fa fa-close"></span>
-    </a>
-    <div class="row m-b-10">
-        <div class="col-12 col-md-8">
-            {{ form_widget(orderItem.product) }}
-        </div>
-        <div class="col-12 col-md-4">
-            {{ form_widget(orderItem.quantity) }}
+    <div class="product-form">
+        <a href="#" class="js-remove-form-product float-right">
+            <span class="fa fa-close"></span>
+        </a>
+        <div class="row m-b-10">
+            <div class="col-12 col-md-8">
+                {{ form_widget(orderItem.product) }}
+                {{ form_errors(orderItem.product) }}
+            </div>
+            <div class="col-12 col-md-4">
+                {{ form_widget(orderItem.quantity) }}
+                {{ form_errors(orderItem.quantity) }}
+            </div>
         </div>
     </div>
 {% endmacro %}
