--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -26,6 +26,10 @@
                         <i class="fas fa-tags"></i>Products</a>
                 </li>
                 <li>
+                    <a href="{{ path('order_index') }}">
+                        <i class="fas fa-shopping-cart"></i>Orders</a>
+                </li>
+                <li>
                     <a href="{{ path('customer_index') }}">
                         <i class="fas fa-users"></i>Customers</a>
                 </li>
@@ -56,6 +60,10 @@
                 <li>
                     <a href="{{ path('product_ index') }}">
                         <i class="fas fa-tags"></i>Products</a>
+                </li>
+                <li>
+                    <a href="{{ path('order_index') }}">
+                        <i class="fas fa-shopping-cart"></i>Orders</a>
                 </li>
                 <li>
                     <a href="{{ path('customer_index') }}">
