--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -93,18 +93,20 @@
                                     <td>$679.00</td>
                                     <td>
                                         <div class="table-data-feature">
-                                            <button class="item" data-toggle="tooltip" data-placement="top" title="Send">
+                                            <a href="#" class="item" data-toggle="tooltip" data-placement="top" title="Send">
                                                 <i class="zmdi zmdi-mail-send"></i>
-                                            </button>
-                                            <button class="item" data-toggle="tooltip" data-placement="top" title="Edit">
+                                            </a>
+                                            <a href="{{ path('order_edit', {'id': order.id}) }}" class="item" data-toggle="tooltip" data-placement="top" title="Edit">
                                                 <i class="zmdi zmdi-edit"></i>
-                                            </button>
-                                            <button class="item" data-toggle="tooltip" data-placement="top" title="Delete">
-                                                <i class="zmdi zmdi-delete"></i>
-                                            </button>
-                                            <button class="item" data-toggle="tooltip" data-placement="top" title="More">
+                                            </a>
+                                            <a href="{{ path('order_show', {'id': order.id}) }}" class="item" data-toggle="tooltip" data-placement="top" title="More">
                                                 <i class="zmdi zmdi-more"></i>
-                                            </button>
+                                            </a>
+                                            <div class="confirmDelete" data-toggle="tooltip" data-placement="top" title="Delete">
+                                                <button type="button" class="item" data-url="{{ path('order_delete', {'id': order.id}) }}" data-toggle="modal" data-target="#confirmDeleteModal">
+                                                    <i class="zmdi zmdi-delete"></i>
+                                                </button>
+                                            </div>
                                         </div>
                                     </td>
                                 </tr>
@@ -118,4 +120,31 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block modals %}
+    <!-- modal static -->
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true"
+         data-backdrop="static">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticModalLabel">Remove order</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Do you really want to remove this order ?
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <a href="#" class="removeOrderSubmit btn btn-primary">Confirm</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end modal static -->
 {% endblock %}
