--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -86,6 +86,15 @@
                     <!-- END DATA TABLE-->
                 </div>
             </div>
+
+
+            <div class="row">
+                <div class="col-md-4 offset-md-4 mr-auto ml-auto m-b-30">
+                    <div class="navigation">
+                        {{ knp_pagination_render(products) }}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
