--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -11,23 +11,18 @@
                 <div class="col-md-10">
                     <div class="table-data__tool">
                         <div class="table-data__tool-left">
-                            <div class="rs-select2--light rs-select2--md">
-                                <select class="js-select2" name="property">
-                                    <option selected="selected">All Properties</option>
-                                    <option value="">Option 1</option>
-                                    <option value="">Option 2</option>
-                                </select>
-                                <div class="dropDownSelect2"></div>
-                            </div>
-                            <div class="rs-select2--light rs-select2--sm">
-                                <select class="js-select2" name="time">
-                                    <option selected="selected">Today</option>
-                                    <option value="">3 Days</option>
-                                    <option value="">1 Week</option>
-                                </select>
-                                <div class="dropDownSelect2"></div>
-                            </div>
-                            <button class="au-btn-filter"><i class="zmdi zmdi-filter-list"></i>filters</button>
+                            <form action="" method="get">
+                                <div class="rs-select2--light rs-select2--md">
+                                    <select class="js-select2" name="type">
+                                        <option value="">Type</option>
+                                        <option value="customer">Customer</option>
+                                        <option value="supplier">Supplier</option>
+                                        <option value="other">other</option>
+                                    </select>
+                                    <div class="dropDownSelect2"></div>
+                                </div>
+                                <button type="submit" class="au-btn-filter"><i class="zmdi zmdi-filter-list"></i>filters</button>
+                            </form>
                         </div>
                         <div class="table-data__tool-right">
                             <a href="{{ path('customer_new') }}" class="au-btn au-btn-icon au-btn--green au-btn--small">
