--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -26,15 +26,8 @@
                         </div>
                         <div class="table-data__tool-right">
                             <a href="{{ path('customer_new') }}" class="au-btn au-btn-icon au-btn--green au-btn--small">
-                                <i class="zmdi zmdi-plus"></i>add customer</a>
-                            <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
-                                <select class="js-select2" name="type">
-                                    <option selected="selected">Export</option>
-                                    <option value="">Option 1</option>
-                                    <option value="">Option 2</option>
-                                </select>
-                                <div class="dropDownSelect2"></div>
-                            </div>
+                                <i class="zmdi zmdi-plus"></i>add customer
+                            </a>
                         </div>
                     </div>
                 </div>
