--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -39,10 +39,9 @@
                             <a href="{{ path('order_new') }}" class="au-btn au-btn-icon au-btn--green au-btn--small">
                                 <i class="zmdi zmdi-plus"></i>new order</a>
                             <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
-                                <select class="js-select2" name="type">
+                                <select class="js-select2" name="export" onchange="location = this.value;">
                                     <option selected="selected">Export</option>
-                                    <option value="">Option 1</option>
-                                    <option value="">Option 2</option>
+                                    <option value="{{ path('order_export') }}">CSV</option>
                                 </select>
                                 <div class="dropDownSelect2"></div>
                             </div>
@@ -102,11 +101,11 @@
                                             <a href="#" class="item" data-toggle="tooltip" data-placement="top" title="Send">
                                                 <i class="zmdi zmdi-mail-send"></i>
                                             </a>
+                                            <a href="{{ path('order_show', {'id': order.id}) }}" class="item" data-toggle="tooltip" data-placement="top" title="View">
+                                                <i class="zmdi zmdi-eye"></i>
+                                            </a>
                                             <a href="{{ path('order_edit', {'id': order.id}) }}" class="item" data-toggle="tooltip" data-placement="top" title="Edit">
                                                 <i class="zmdi zmdi-edit"></i>
-                                            </a>
-                                            <a href="{{ path('order_show', {'id': order.id}) }}" class="item" data-toggle="tooltip" data-placement="top" title="More">
-                                                <i class="zmdi zmdi-more"></i>
                                             </a>
                                             <div class="confirmDelete" data-toggle="tooltip" data-placement="top" title="Delete">
                                                 <button type="button" class="item" data-url="{{ path('order_delete', {'id': order.id}) }}" data-toggle="modal" data-target="#confirmDeleteModal">
@@ -145,7 +144,7 @@
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="staticModalLabel">Remove order</h5>
+                    <h5 class="modal-title" id="staticModalLabel">Remove product</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
