--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -13,7 +13,7 @@
                     <div class="user-data m-b-30">
                         <h3 class="title-3 m-b-30">
                             <i class="zmdi zmdi-account-calendar"></i>user data</h3>
-                        <div class="filters m-b-45">
+                        {#<div class="filters m-b-45">
                             <div class="rs-select2--dark rs-select2--md m-r-10 rs-select2--border">
                                 <select class="js-select2" name="property">
                                     <option selected="selected">All Properties</option>
@@ -30,7 +30,7 @@
                                 </select>
                                 <div class="dropDownSelect2"></div>
                             </div>
-                        </div>
+                        </div>#}
                         <div class="table-responsive table-data">
                             <table id="table-data" class="table">
                                 <thead>
