--- a/templates/order/invoice.html.twig
+++ b/templates/order/invoice.html.twig
@@ -27,6 +27,10 @@
             .status--denied{
                 color: red;
             }
+
+            .login-logo img{
+                width: 100px;
+            }
         </style>
     </head>
 
@@ -35,7 +39,8 @@
         <div class="container-fluid">
             <div class="login-logo">
                 <a href="{{ path('index_default') }}">
-                    <img src="{{ asset('build/images/logoERPv2couleur.png') }}" alt="MyERP">
+                    {#<img src="{{ asset('build/images/logoERPv2couleur.png') }}" alt="MyERP">#}
+                    <img src="../assets/images/logoERPv2couleur.png" alt="MyERP">
                 </a>
             </div>
             <div class="row">
@@ -50,7 +55,7 @@
                                     {% else %} <span class="status--denied">Denied</span>
                                     {% endif %}
                                 </div>
-                                <div class="col-md-8 offset-md-2 hr">
+                                <div class="col-md-8 offset-md-2 mb-4 hr">
                                     <b class="text-center">Customer : {{ order.customer }}</b>
                                 </div>
                             </div>
@@ -66,7 +71,6 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                {% set total_price_order = 0 %}
                                 {% for orderItem in order.orderItems %}
                                     <tr>
                                         <td>{{ orderItem.product.name }}</td>
@@ -75,13 +79,12 @@
                                         <td>{{ orderItem.quantity }}</td>
                                         <td>{{ orderItem.price }}€</td>
                                     </tr>
-                                    {% set total_price_order = total_price_order + orderItem.price %}
                                 {% endfor %}
                                 </tbody>
                             </table>
 
                             <div class="blockquote mt-3 text-right location">
-                                <p>Total : {{ total_price_order }}€</p>
+                                <p>Total : {{ order.price}}€</p>
                             </div>
                         </div>
                     </div>
@@ -92,8 +95,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-    <!-- afin de pouvoir lire les fichier css de webpack -->
 
     </body>
 </html>
