--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -3,8 +3,8 @@
     <div class="section__content section__content--p30">
         <div class="container-fluid">
             <div class="header-wrap">
-                <form class="form-header" action="" method="POST">
-                    <input class="au-input au-input--xl" type="text" name="search" placeholder="Search for datas &amp; reports..." />
+                <form class="form-header" action="{{ path("default_search") }}" method="POST">
+                    <input class="au-input au-input--xl" type="text" name="query" placeholder="Search for datas &amp; products..." required/>
                     <button class="au-btn--submit" type="submit">
                         <i class="zmdi zmdi-search"></i>
                     </button>
