--- a/templates/default/searchResult.html.twig
+++ b/templates/default/searchResult.html.twig
@@ -13,10 +13,19 @@
                     </div>
                 </div>
             </div>
+            {% if results is empty %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="alert alert-secondary" role="alert">
+                           No Results found
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
             {% for result in results %}
                 <div class="search_result">
                     <a href="{{ path('product_show', {'id': result.id }) }}">
-                        <div class="">
+                        <div class="row">
                             <div class="col-md-12">
                                 <div class="card border border-success">
                                     <div class="card-header">
