--- a/templates/default/searchResult.html.twig
+++ b/templates/default/searchResult.html.twig
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-md-12 m-b-25">
                     <div class="overview-wrap">
-                        <h2 class="title-1">Results Search</h2>
+                        <h2 class="title-1">Results Search for "{{ querySearch }}"</h2>
                     </div>
                 </div>
             </div>
@@ -22,23 +22,38 @@
                     </div>
                 </div>
             {% endif %}
-            {% for result in results %}
-                <div class="search_result">
-                    <a href="{{ path('product_show', {'id': result.id }) }}">
+            {% for resultByEntity in results %}
+                {% for result in resultByEntity %}
+                    {% set path = result.entity ~ "_show" %}
+                    <div class="search_result">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="card border border-success">
-                                    <div class="card-header">
-                                        <strong class="card-title">{{ result.name }}</strong>
-                                    </div>
-                                    <div class="card-body">
-                                        <p class="card-text">{{ result.description }}</p>
-                                    </div>
+                                    <a href="{{ path(path, {'id': result.id }) }}">
+                                        <div class="card-header">
+                                            <strong class="card-title">{{ result.name ?? result.reference}}
+                                                <small>
+                                                    <span class="badge badge-success float-right mt-1">{{ result.entity }}</span>
+                                                </small>
+                                            </strong>
+                                        </div>
+                                        <div class="card-body">
+                                            {% if result.entity == "product" %}
+                                                <p class="card-text">{{ result.description }}</p>
+                                            {% elseif result.entity == "customer" %}
+                                                <p class="card-text">{{ result.email }}</p>
+                                                <p class="card-text">{{ result.phone }}</p>
+                                            {% elseif result.entity == "order" %}
+                                                <p class="card-text">{{ result.customer }}</p>
+                                                <p class="card-text">{{ result.dateOrder|date('d-M-Y H:m')  }}</p>
+                                            {% endif %}
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                {% endfor %}
             {% endfor %}
         </div>
     </div>
