--- a/templates/customer/form.html.twig
+++ b/templates/customer/form.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Edit Customer
+    {% if editMode == true %}Edit Customer
+    {% else %}New Customer
+    {% endif %}
 {% endblock %}
 
 {% block body %}
@@ -19,7 +21,7 @@
                             {{ form_start(formCustomer) }}
                             <div class="form-group">
                                 <div class="input-group">
-                                    {{ form_widget(formCustomer.name, {'attr': {'class': 'form-control', 'placeholder': 'name ...'}}) }}
+                                    {{ form_widget(formCustomer.name, {'attr': {'class': 'form-control', 'placeholder': 'complet name ...'}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
@@ -29,12 +31,12 @@
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    {{ form_widget(formCustomer.code, {'attr': {'class': 'form-control', 'placeholder': 'code ...'}}) }}
+                                    {{ form_widget(formCustomer.email, {'attr': {'class': 'form-control', 'placeholder': 'email ...'}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="input-group">
-                                    {{ form_widget(formCustomer.email, {'attr': {'class': 'form-control', 'placeholder': 'email ...'}}) }}
+                                    {{ form_widget(formCustomer.phone, {'attr': {'class': 'form-control', 'placeholder': 'phone ...'}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
