--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -43,7 +43,7 @@
                                     {% for customer in customers %}
                                         <tr>
                                             <td><a href="{{ path('customer_show', {'id': customer.id}) }}">{{ customer.name }}</a></td>
-                                            <td>{{ customer.type }}</td>
+                                            <td>{% if customer.type == 0 %}Customer{% elseif customer.type == 1 %}Supplier{% endif %}</td>
                                             <td>N° {{ customer.code }}</td>
                                         </tr>
                                     {% endfor %}
