--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -24,12 +24,12 @@
                                     <i class="zmdi zmdi-account-o"></i>
                                 </div>
                                 <div class="text">
-                                    <h2>10368</h2>
-                                    <span>members online</span>
+                                    <h2>{{ nbCustomers }}</h2>
+                                    <span>total customers</span>
                                 </div>
                             </div>
                             <div class="overview-chart">
-                                <canvas id="widgetChart1"></canvas>
+                                <canvas id="widgetChart1" data-chart="{{ nbCustomersByMonth|json_encode() }}"></canvas>
                             </div>
                         </div>
                     </div>
