--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -25,7 +25,7 @@
                                 </div>
                                 <div class="text">
                                     <h2>{{ nbCustomers }}</h2>
-                                    <span>total customers</span>
+                                    <span>customers</span>
                                 </div>
                             </div>
                             <div class="overview-chart">
@@ -42,12 +42,12 @@
                                     <i class="zmdi zmdi-shopping-cart"></i>
                                 </div>
                                 <div class="text">
-                                    <h2>388,688</h2>
-                                    <span>items solid</span>
+                                    <h2>{{ nbOrders }}</h2>
+                                    <span>items sold</span>
                                 </div>
                             </div>
                             <div class="overview-chart">
-                                <canvas id="widgetChart2"></canvas>
+                                <canvas id="widgetChart2" data-chart="{{ nbOrdersByMonth|json_encode() }}"></canvas>
                             </div>
                         </div>
                     </div>
