--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,8 +10,7 @@
                 <div class="col-md-12">
                     <div class="overview-wrap">
                         <h2 class="title-1">overview</h2>
-                        <button class="au-btn au-btn-icon au-btn--blue">
-                            <i class="zmdi zmdi-plus"></i>add item</button>
+                        {#<button class="au-btn au-btn-icon au-btn--blue"><i class="zmdi zmdi-plus"></i>add item</button>#}
                     </div>
                 </div>
             </div>
@@ -78,12 +77,12 @@
                                     <i class="zmdi zmdi-money"></i>
                                 </div>
                                 <div class="text">
-                                    <h2>$1,060,386</h2>
+                                    <h2>{{ totalEarnings|number_format }}</h2>
                                     <span>total earnings</span>
                                 </div>
                             </div>
                             <div class="overview-chart">
-                                <canvas id="widgetChart4"></canvas>
+                                <canvas id="widgetChart4" data-chart="{{ totalEarningsByMonth|json_encode() }}"></canvas>
                             </div>
                         </div>
                     </div>
