--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -161,10 +161,10 @@
                                         <a href="#">
                                             <i class="zmdi zmdi-settings"></i>Setting</a>
                                     </div>
-                                    <div class="account-dropdown__item">
+                                    {#<div class="account-dropdown__item">
                                         <a href="#">
                                             <i class="zmdi zmdi-money-box"></i>Billing</a>
-                                    </div>
+                                    </div>#}
                                 </div>
                                 {% if is_granted('ROLE_PREVIOUS_ADMIN') %}
                                     <div class="account-dropdown__footer">
