--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -31,11 +31,11 @@
                 </label>
             </div>
             <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">register</button>
-            <div class="social-login-content">
+            {#<div class="social-login-content">
                 <div class="social-button">
                     <button class="au-btn au-btn--block au-btn--blue m-b-20">register with facebook</button>
                 </div>
-            </div>
+            </div>#}
 
         {{ form_end(form) }}
         <div class="register-link">
